# motionxbot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt
deploy/hostinger/: motionxbot.service
motionxbot/: bot.py  command_registry.py  config.py  health.py  rendering.py  store.py  time_utils.py  transfer.py
scripts/: check.ps1  check.sh  deploy-commands.js
scripts/hostinger/: install.sh  update.sh
src/: config.js  index.js
src/commands/: approval.js  automation-help.js  autorole.js  botstatus.js  bulkrole.js  channel.js  checklist.js  cleanup.js  heartbeat.js  job.js  logchannel.js  reminder.js  tag.js  template.js  todo.js  transfer.js
src/runtime/: health-server.js  load-commands.js  scheduler.js
src/utils/: discord.js  render.js  store.js  time.js
